RESOLVED FIXED 56009
JavaNPObject should not use JNI directly
https://bugs.webkit.org/show_bug.cgi?id=56009
Summary JavaNPObject should not use JNI directly
Steve Block
Reported 2011-03-09 04:15:55 PST
JavaNPObject should not know about JNI. Instead it should make calls to Java through JavaInstance, which will in turn use JNI to access Java. This will allow us to factor out a JavaInstance interface which is independent of JNI. See Bug 55383.
Attachments
Patch (3.43 KB, patch)
2011-03-09 05:40 PST, Steve Block
jorlow: review+
Steve Block
Comment 1 2011-03-09 05:40:44 PST
Andrei Popescu
Comment 2 2011-03-09 09:52:38 PST
LGTM
Jeremy Orlow
Comment 3 2011-03-09 10:01:21 PST
Comment on attachment 85165 [details] Patch r(ubber stamp)=me
Steve Block
Comment 4 2011-03-09 11:14:34 PST
Note You need to log in before you can comment on or make changes to this bug.