2011-03-09  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        JavaNPObject should not use JNI directly
        https://bugs.webkit.org/show_bug.cgi?id=56009

        We move the JNI code to access a Java object's fields into
        a new JavaInstance::getField() method.

        No new tests, refactoring only.

        * bridge/jni/v8/JavaInstanceV8.cpp:
        (JavaInstance::getField):
        * bridge/jni/v8/JavaInstanceV8.h:
        * bridge/jni/v8/JavaNPObjectV8.cpp:
        (JSC::Bindings::JavaNPObjectGetProperty):

Canonical link: https://commits.webkit.org/70544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80653 268f45cc-cd09-0410-ab3c-d52691b4dbfc